# yorkie-rust-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
crates/yorkie/: Cargo.toml
crates/yorkie-client/: Cargo.toml
crates/yorkie-client/src/: attachment.rs  client.rs  error.rs  lib.rs  options.rs  protocol.rs  transport.rs
crates/yorkie-core/: Cargo.toml
crates/yorkie-core/src/: document.rs  error.rs  json.rs  lib.rs  schema.rs  wire.rs
crates/yorkie-core/src/change/: change.rs  checkpoint.rs  context.rs  id.rs  mod.rs  pack.rs
crates/yorkie-core/src/crdt/: array.rs  counter.rs  element.rs  element_rht.rs  hll.rs  mod.rs  object.rs  primitive.rs  rga_tree_list.rs  (+6 more)
crates/yorkie-core/tests/: document.rs  time.rs
crates/yorkie-protocol/: Cargo.toml  build.rs
crates/yorkie-protocol/src/: converter.rs  lib.rs  resources.rs
crates/yorkie/src/: lib.rs
crates/yorkie/tests/: facade.rs
docker/: docker-compose.yml
docs/: README.md  current-porting-gaps.md  dependency-boundaries.md  porting-from-js-sdk.md
docs/crdt-parity/: README.md  array-rga-tree-list.md  counter.md  element.md  object-element-rht.md  primitive.md  rht-attributes.md  root-and-gc.md  splay-index.md  text-rga-tree-split.md  tree.md  upstream-skipped-tests.md
src/: client.rs  client_options.rs  lib.rs  main.rs
src/document/: key.rs  llrb.rs  mod.rs  splay.rs
src/document/json/: element.rs  mod.rs  rht.rs  rht_pq_map.rs
src/document/time/: actor_id.rs  mod.rs  ticket.rs
tests/: client_test.rs
(+17 files in other folders)
