[package]
name = "yorkie"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", default-features = false, features= ["v4"] }
log = "0.4"
env_logger = "0.9"
hex = "0.4"
thiserror = "1.0.30"

[build-dependencies]
tonic-build = "0.5"

[features]
